# Mechatronics

./: .gitignore  README.md  notes.txt  putty.txt
hw/: CMakeLists.txt
hw/Robot_CAD/: brackets.stl  camera_base.prt  pcb_assembly.prt
hw/Robot_Proj/CAD/: brackets.prt  camera.prt  pcb_assembly.prt  pcb_motor.prt  stick.prt
hw/Robot_Proj/CAD/pic/: IMG_0219.HEIC  bracket.heic  wheel_assembly.HEIC
hw/Robot_Proj/CAD/stl/: Wheel.stl  bracket.bgcode  brackets_3.stl  cam_components.bgcode  camera_base.stl
hw/Robot_Proj/motor/: motor.c
hw/hw12/servo/: CMakeLists.txt
hw/hw13/: CMakeLists.txt
hw/hw13/mouse/: mouse.c
hw/hw13/usb/: CMakeLists.txt  usb.c  usb_descriptors.h
hw/hw14/: IIR.py  python_csv.py  python_plot.py
hw/hw16/: CMakeLists.txt
hw/hw16/complete/: CMakeLists.txt
hw/hw2/: CMakeLists.txt
hw/hw2/blink/: CMakeLists.txt  blink.c
hw/hw3/: CMakeLists.txt
hw/hw3/io_adc/: CMakeLists.txt  io_adc.c
hw/hw3/print/: CMakeLists.txt  print.c
hw/hw4/: IMG_9911.heic
hw/hw4/spi/: spi.c
hw/hw5/: CMakeLists.txt
hw/hw5/i2c/: i2c.c
hw/hw6/: CMakeLists.txt
hw/hw6/oled/: CMakeLists.txt  oled.c
hw/hw7/: CMakeLists.txt
hw/hw7/uart/: CMakeLists.txt
hw/hw8/: CMakeLists.txt
hw/hw8/zero/: CMakeLists.txt  zero.c
pico/DSP/: MAF_FIR.py  full_FIR.py  old_sig_fft.py  python_fft.py
pico/Robot_Proj/CAD/: Wheel.prt  cam_holder.prt  camera_base.prt  pcb_mother.prt
pico/Robot_Proj/CAD/pic/: IMG_0220.HEIC
pico/Robot_Proj/CAD/stl/: cam_holder.stl  cam_holder_2.stl  wheel.bgcode
pico/Robot_Proj/motor/: CMakeLists.txt  camera.py  motor.c  motorControl.c
pico/blink/: CMakeLists.txt
pico/gyro_mouse/mouse/: CMakeLists.txt  mouse.c
pico/i2c/i2c/: CMakeLists.txt
pico/io_adc/: CMakeLists.txt
pico/io_adc/print/: print.c
pico/line_following_code/complete/: complete.c
pico/oled/oled/: ssd1306.c
pico/rpi_zero/zero/: CMakeLists.txt  zero.c
pico/servo/: CMakeLists.txt
pico/servo/servo/: servo.c
pico/spi/: CMakeLists.txt
pico/spi/spi/: CMakeLists.txt  spi.c
pico/uart/uart/: uart.c
template/: CMakeLists.txt
template/proj/: CMakeLists.txt
